Fixing picture click issue on mobile

--- a/src/components/karen.scss
+++ b/src/components/karen.scss
@@ -33,6 +33,7 @@
         opacity: 0.1;
         left: -0.5rem;
         top: -0.5rem;
+        pointer-events: none;
       }
 
       img {
